Camera now works. File gets saved to device. See description for more..
As in API 24 the file saving of the internal camera has to be changed. Everything now goes over an Fileprovider. for more information see: https://inthecheesefactory.com/blog/how-to-share-access-to-file-with-fileprovider-on-android-nougat/en

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,8 @@
     <string name="lbl_forgot_password">Forgot password?</string>
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
     <string name="camera">Camera</string>
+    <string name="takePicture">Take Picture</string>
+    <string name="takeVideo">Take Video</string>
+    <string name="Picture"> Picture </string>
+    <string name="Video"> Video </string>
 </resources>
